<resources>
    <string name="app_name">Loving People</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="title_resource">Resource</string>
    <string name="title_chatting">Chatting</string>
    <string name="title_search">Search</string>
    <string name="title_register_counselor">Register Counselor</string>

    <string name="nav_header_title">Anonymous</string>
    <string name="nav_header_subtitle">id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Opening Drawer</string>
    <string name="navigation_drawer_close">Closing Drawer</string>

    <string name="welcome_message">Welcome to\nLoving People</string>
    <string name="welcome_username">Username</string>
    <string name="welcome_password">Password</string>
    <string name="welcome_password_confirm">Confirm Password</string>
    <string name="welcome_log_in">Log In</string>
    <string name="welcome_log_in_back">Back To Log In</string>
    <string name="welcome_sign_up">Sign Up</string>
    <string name="welcome_complete">Complete</string>
    <string name="welcome_error">Error</string>
    <string name="welcome_progress">Loading</string>

    <string name="error_invalid_username">Invalid Username</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_invalid_matching">Not Match!</string>

    <string name="hint_enter_a_message">Type a message</string>

    <string name="switch_to_counselor">Switch to Counselor</string>
    <string name="switch_to_storyteller">Switch to Storyteller</string>

    <string name="action_logout">Logout</string>
    <string name="action_change_status">Change Status</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="timeout">Timeout:</string>
    <string name="accept_privacy">I have read and agreed to the Privacy Policies</string>
    <string name="accept_terms">I have read and agreed to the Terms and Conditions</string>

    <string name="connect">Connect and Chat</string>
    <string name="connecting">Connecting</string>
    <string name="connecting_to">Connecting to</string>
    <string name="connect_accept">Accept</string>
    <string name="connect_cancel">Cancel</string>
    <string name="connect_decline">I\'m busy now</string>

    <string name="register_name">Full name</string>
    <string name="register_introduce">Introduce</string>
    <string name="register_fields">Best fields (OCD, Depression, …)</string>
    <string name="register_birth">Year of Birth</string>
    <string name="register_address">Address</string>
    <string name="register_experience">Experience in Mental Health</string>
</resources>
