<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_green_gradient">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_status"
        android:layout_centerHorizontal="true"
        android:text="@string/loading"
        android:textColor="#fff"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/civ_avatar"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato_regular"
        android:text="@string/connecting_to"
        android:textColor="#fff"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/text_margin"
        android:orientation="horizontal"
        android:weightSum="23">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="15"
            android:background="#ff5252"
            android:text="@string/connect_cancel"
            android:textColor="#fff" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />
    </LinearLayout>
</RelativeLayout>
