<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/red_red_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size" />

    <TextView
        android:layout_below="@id/civ_avatar"
        android:id="@+id/tv_name"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:paddingStart="@dimen/text_normal"
        android:paddingEnd="@dimen/text_normal"
        android:textSize="16dp"
        android:text="@string/loading"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_below="@id/tv_name"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="16dp"
        android:text="wants to connect with you"
        android:fontFamily="@font/lato_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_timeout"
            android:textColor="#fff"
            android:text="@string/timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <TextView
            android:textColor="#fff"
            android:text="..."
            android:id="@+id/tv_timeout_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/text_margin"
        android:weightSum="23"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bt_accept"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00C76E"
            android:textColor="#fff"
            android:text="@string/connect_accept" />

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bt_deny"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#ff5252"
            android:textColor="#fff"
            android:text="@string/connect_decline" />
    </LinearLayout>
</RelativeLayout>