<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ab_conversation"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_conversation"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_chatting" />
    </android.support.design.widget.AppBarLayout>

    <com.stfalcon.chatkit.messages.MessagesList
        android:id="@+id/messagesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ab_conversation"
        android:layout_above="@+id/fl_input_conversation"
        app:dateHeaderFormat="dd MMMM yyyy"
        app:incomingDefaultBubbleColor="@color/ivory"
        app:incomingDefaultBubblePressedColor="@color/ivory_dark"
        app:incomingDefaultBubbleSelectedColor="@color/gray"
        app:incomingDefaultImageOverlayPressedColor="@color/black_10"
        app:incomingDefaultImageOverlaySelectedColor="@color/gray_transparent"
        app:incomingTextColor="@color/black"
        app:incomingTextLinkColor="@color/green"
        app:incomingTextSize="18sp"
        app:outcomingDefaultBubbleColor="@color/green"
        app:outcomingDefaultBubblePressedColor="@color/green_dark"
        app:outcomingDefaultBubbleSelectedColor="@color/gray_dark_transparent"
        app:outcomingDefaultImageOverlayPressedColor="@color/black_10"
        app:outcomingDefaultImageOverlaySelectedColor="@color/gray_transparent"
        app:outcomingTextColor="@color/white"
        app:outcomingTextLinkColor="@color/brown"
        app:outcomingTextSize="18sp"
        app:textAutoLink="all" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/fl_input_conversation"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray_light" />


    <FrameLayout
        android:id="@+id/fl_input_conversation"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.stfalcon.chatkit.messages.MessageInput
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:attachmentButtonDefaultIconColor="@color/green"
            app:attachmentButtonDefaultIconPressedColor="@color/green_dark"
            app:inputButtonDefaultBgColor="@color/green"
            app:inputButtonDefaultBgPressedColor="@color/green_dark"
            app:inputCursorDrawable="@drawable/shape_custom_cursor"
            app:inputHint="@string/hint_enter_a_message"
            app:showAttachmentButton="true" />

        <Button
            android:id="@+id/bt_connect"
            android:background="#fff"
            android:text="@string/connect"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</RelativeLayout>
